--- a/index.html
+++ b/index.html
@@ -32,13 +32,28 @@
                     margin-left: 30px;
                     font-weight: bolder;
                 }
+                a {
+    color: black;
+    text-decoration: none;
+}
+
+/* Keep it black even after it has been clicked */
+a:visited {
+    color: black;
+}
+
+/* On hover, keep black text but add underline (or other effect) */
+a:hover {
+    color: black; /* still black */
+    text-decoration: underline; /* could also use bold, background, etc. */
+}
     
     </style>
 </head>
 <body>
     <h1>> Research and Ideas</h1>
     <div class="normaltext"> 
-        <a href="TNXP_report.pdf" target="_blank">potential to be a 500mln drug </a>
+        <a href="TNXP_report.pdf" target="_blank"> Tonmya's potential to be a 500mln drug </a>
     </div>
     <div class="dotted-line"></div>
     <h1>>LONGS</h1>
