--- a/index.html
+++ b/index.html
@@ -51,22 +51,18 @@ a:hover {
     </style>
 </head>
 <body>
-    <h1>> Research and Ideas</h1>
+    <h1>> Research</h1>
     <div class="normaltext"> 
         <a href="TNXP_report.pdf" target="_blank"> Tonmya's potential to be a 500mln drug </a>
     </div>
     <div class="dotted-line"></div>
-    <h1>>LONGS</h1>
+    <h1>>Longs</h1>
     <div style="flex-direction: row;">
-    <div class="textcvright"> PBR: &nbsp; One of the largest moats in Brazil and strong yield</div>
-    <div class="textcvright"> TNXP: &nbsp; Undervalued small biotech with positive catalyst ahead</div>
-    <div class="textcvright"> FER: &nbsp; Just copied TCI to be honest</div>
-    <div class="textcvright"> SRPT: &nbsp; Bag holding tbh </div>
-    <div class="textcvright"> LLY: &nbsp; Still GLP-1 leader and strong growth last quarter</div>
+    <div class="textcvright"> PBR &nbsp;</div>
+    <div class="textcvright"> TNXP &nbsp; </div>
+    <div class="textcvright"> SRPT &nbsp; </div>
     <div class="dotted-line"></div>
-    <h1>> SHORTS</h1>
-    <div class="textcvright"> IONQ: &nbsp; Not doing good on this</div>
-    <div class="dotted-line"></div>
+
 
     
 </body>
