--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ a:hover {
     </style>
 </head>
 <body>
-    <h1>> Research</h1>
+    <h1>> RESEARCH</h1>
     <div class="normaltext"> 
         <a href="TNXP_report.pdf" target="_blank"> Tonmya's potential to be a 500mln drug </a>
     </div>
     <div class="dotted-line"></div>
-    <h1>>Longs</h1>
+    <h1>> LONGS</h1>
     <div style="flex-direction: row;">
     <div class="textcvright"> PBR &nbsp;</div>
     <div class="textcvright"> TNXP &nbsp; </div>
